@@ -1,4 +1,4 @@
-.\"	$NetBSD: modctl.2,v 1.5 2010/08/18 01:55:32 pgoyette Exp $
+.\"	$NetBSD: modctl.2,v 1.6 2010/11/28 00:26:38 jnemeth Exp $
 .\"
 .\" Copyright (c) 2009 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -24,7 +24,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd October 26, 2009
+.Dd November 27, 2010
 .Dt MODCTL 2
 .Os
 .Sh NAME
@@ -98,7 +98,7 @@ The name/path of the module to load.
 Zero or more of the following flag values:
 .Bl -tag -compact -width "MODCTL_LOAD_FORCE"
 .It Dv MODCTL_NO_PROP
-Don't load \*[Lt]module\*[Gt].prop.
+Don't load \*[Lt]module\*[Gt].plist.
 .It Dv MODCTL_LOAD_FORCE
 Ignore kernel version mismatch.
 .El
@@ -221,7 +221,7 @@ and
 is not
 .Dv 0 .
 The kernel is unable to internalize the plist.
-Or, there is a problem with the module or \*[Lt]module\*[Gt].prop.
+Or, there is a problem with the module or \*[Lt]module\*[Gt].plist.
 .It Bq Er EMLINK
 The argument
 .Fa operation
